--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ opencv_python==4.7.0.68
 PyAutoGUI==0.9.53
 pycocotools==2.0.6
 pywin32==305
-ruamel.yaml
+pydantic
+ruamel-yaml==0.17.32
 setuptools
 tabulate==0.9.0
 thop==0.1.1.post2209072238
